Creating feature branch for counter & adding counter functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Git Commit Playground</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
 
 <div class="container">
@@ -25,6 +26,17 @@
     <button id="clearBtn" class="danger">Clear History</button>
 </div>
 
+<div class="counter-container">
+    <h2>Interactive Counter</h2>
+    <div class="counter-value" id="counter">0</div>
+    <div class="buttons">
+        <button id="decrement">-</button>
+        <button id="increment">+</button>
+        <button id="reset">Reset</button>
+    </div>
+</div>
+
 <script src="index.js"></script>
 </body>
+
 </html>
